--- a/inplex/templates/inplex/student_experienceprofile.html
+++ b/inplex/templates/inplex/student_experienceprofile.html
@@ -75,3 +75,13 @@
 </div>
 
 {% endblock %}
+<!-- {{object.owner.first_name}}
+{{object.program}} {{object.branch}}
+{{object.selected_company}} 
+{{object.profile}} 
+{{object.resource|safe}}
+{% for i in exp %} {% if i.owner == object.owner %}
+{{i.experience1|safe}}
+{{object.number}}
+href="{{object.linked_in_profile}}"
+href="{{i.resume}}" -->
