--- a/talk/templates/talk/home.html
+++ b/talk/templates/talk/home.html
@@ -1,113 +1,38 @@
 {% extends "base.html" %} {% load static %} {% block title %} Talk | Cepstrum {% endblock title %} {% block css %}
 <style>
-    .carousel-item {
-        height: 100vh;
-        background: no-repeat center center scroll;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-    }
-    .content {
-        text-align: center;
-        padding-top: 5%;
-        padding-right: 4%;
-        padding-left: 60%;
-        color: white;
-    }
-    
-    .carousel-item-content {
-        /* margin-top: 20%;
-  margin-left: 15%;
-  margin-right: 30%; */
- 
-   text-align: justify;
-        width: 75%;
-        font-size: 2vh;
-    }
-    .carousel-item-screen {
-        color: white;
-        background-color: rgba(0, 0, 0, 0.6);
-        width: 100%;
-        height: 100%;align-items:center;
-        display: flex;
-        justify-content: center;
-    }
-    @media  screen and (max-width:1000px) {
-       .carousel-item{
-        height: 92.4vh;
-       }
-    }
-    .link-button {
-        color: white;
-        background-color: #555555;
-        display: inline-block;
-        text-decoration: none;
-        padding: 5px 10px;
-        border-radius: 5px;
-    }
-    
-    .link-button:hover {
-        text-decoration: none;
-        color: white;
-        background-color: #222222;
-        display: inline-block;
-        text-decoration: none;
-        padding: 5px 10px;
-        border-radius: 5px;
-    }
 
-
-    .video {
-        position: relative;
-        width: 100%;
-        height: 0;
-        padding-bottom: 56.25%;
-    }
-    iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
 
     
 </style>
 
 {% endblock %} {% block carousel %}
 
-
-<div id="carouselExampleIndicators" class="carousel slide my-carousel
-    my-carousel" data-ride="carousel">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
-            <div class="carousel-item-screen">
-
-
-            </div>
-
-        </div>
-
-
-
-
-
-
-        <!-- <div class="carousel-item" data-interval="9000">
-      <video autoplay muted loop width="100%" height="130%" id="myVideo">
-        <source src="https://drive.google.com/uc?export=download&id=1EZyLXoTGOUd2YLC11fzvXRCZ-vTVzta9" type="video/mp4">
-      </video>
-
-    </div> -->
-
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="/cepstrum/static/inphase/cover.png" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/cepstrum/static/inplace/cover.png" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/cepstrum/static/inphase/cover.png" alt="Third slide">
+      </div>
     </div>
-
-</div>
-
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 {% endblock %} {% block content %}
 <br>
 <div class="container" style="align-items: center;">
