--- a/inplex/templates/inplex/student_experience.html
+++ b/inplex/templates/inplex/student_experience.html
@@ -435,7 +435,9 @@ body{
     background-color: rgb(233 238 244);
 	}
 
-
+a {
+	text-decoration: none;
+}
 
 	#student-table_length{
 		display: block;
@@ -469,64 +471,7 @@ body{
 							<div style="background: rgb(233, 238, 244);border-top-left-radius:16px ;border-top-right-radius:46px;">
 							</div>
 
-							<div style="background: rgb(233, 238, 244);margin-bottom: 5vh;padding-left: 5vw;">
-
-								<div class="col-6 col-lg-3" style="display: inline-block;max-width: 299px;">
-									<div class="form-group">
-										<label for="branch">Branch</label>
-										<select class="form-control" id="branch_filter" style="border-color: #7774e7;">
-											<option selected="true" value="all">All</option>
-									
-											<option value="htfg">ghfgh</option>
-									
-										</select>
-									</div>
-								</div>
-
-								<div class="col-6 col-lg-3" style="display: inline-block;max-width: 299px;">
-									<div class="form-group">
-										<label for="branch">Program</label>
-										<select class="form-control" id="program_filter" style="border-color: #7774e7;">
-											<option selected="true" value="all">All</option>
-											<option value="B.Tech">B.Tech</option>
-											<option value="B.Des">B.Des</option>
-											<option value="M.Tech">M.Tech</option>
-											<option value="M.Des">M.Des</option>
-											<option value="M.Sc">M.Sc</option>
-											<option value="Phd">Phd</option>
-											<option value="Others">Others</option>
-										</select>
-									</div>
-								</div>
-
-								<div class="col-6 col-lg-3" style="display: inline-block;max-width: 299px;">
-									<div class="form-group">
-										<label for="branch">Year</label>
-										<select class="form-control" id="program_filter" style="border-color: #807cee;">
-											<option selected="true" value="2023">2023</option>
-											<option value="2022">2022</option>
-											<option value="2021">2021</option>
-										</select>
-									</div>
-								</div>
-
-
-								<div class="col-6 col-lg-3" style="display: inline-block;max-width: 299px;">
-									<div class="form-group">
-										<label for="SortBy">Sort By</label>
-										<select class="form-control" id="sort" style="border-color: #7774e7;">
-											<option selected="true" value='roll'>Roll No</option>
-											<option value='name'>Name</option>
-											<option value='programs'>Program</option>
-											<option value='branch'>Branch</option>
-											<option value='company'>Company</option>
-											<option value='profile'>Profile</option>
-											<option value='sector'>Sector</option>
-										</select>
-									</div>
-								</div>
-
-							</div>
+							
 
 							<div class="acad_row">
 
