--- a/inplex/templates/inplex/create_profile.html
+++ b/inplex/templates/inplex/create_profile.html
@@ -1,116 +1,246 @@
+
+
+
 {% extends "base.html" %}{% load bootstrap %}{% load crispy_forms_tags %} {% block title %} Inplex | Cepstrum {% endblock title %} {% block head %}
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js" integrity="sha512-2ImtlRlf2VVmiGZsjm9bEyhjGW4dU7B6TNwh/hx/iSByxNENtj3WVE6o/9Lj4TJeVXPi4bnOIMXFIJJAeufa0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-{% endblock head %} {% block css %}
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Acme&family=Lobster&family=Montserrat:wght@400;600;700;900&family=Nunito:wght@500&family=Pacifico&family=Poppins&display=swap');
-    .carousel-item {
-        height: 50vh;
-        background: no-repeat center center scroll;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-    }
-    
-    .carousel-item-content {
-        /* margin-top: 20%;
-  margin-left: 15%;
-  margin-right: 30%; */
-        font-size: 2vh;
-    }
-    
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css2?family=Acme&family=Lobster&family=Montserrat:wght@400;600;700;900&family=Nunito:wght@500&family=Pacifico&family=Poppins&display=swap');
+body{
+    overflow: scroll !important;
+}
+.body{
+    min-height: 60vh;
+}
     .carousel-item-screen {
         color: white;
-        background-color: rgba(0, 0, 0, 0.6);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+    .background-black {
         width: 100%;
         height: 100%;
-        padding: 10% 7% 0 5%;
+        background-color: rgba(62, 62, 75, 0.479);
+        padding-bottom:5vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-top: 5vh;
     }
+    .background{
+        height:50vh;
+        background-image: url('/cepstrum/static/inplex/cover.png');
+        background-size: cover;
+        background-repeat: no-repeat; 
+        
+    }
+    a{
+        text-decoration: none;
+        color: unset;
+    }
+    a:hover{
+        color: yellow;
+    }
+    .container{
+   
+        max-width: 92%;
+        
+    }
+   
+    p{
+        margin-bottom: 0;
+    }
+    
+@media screen and (max-width:1350px) {
+    .carousel-item-content {
+        color: white;
+
+        text-align: left;
+        width: 80%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 2.5vh;
+
+    }
+
+    .select2 {
+        width:50vw !important;
+    }
+    .form-group{
+        display: flex;
+        flex-direction: column;
+       
+    }
+  .type_select span{
+    width: 80% !important;
+  }
+.type_select div{
+    gap: 1vh;
+}
+  .type_select{
+    width: 40%;
+   
+  }
+ .body{
+    min-height: 0vh;
+ }
+ .company_profile{
+    display: flex;
+    align-items: center;
+flex-direction: column;
+ }
+ .row{
+    width: 100%;
+display: flex;
+flex-direction: column;
+    padding: 2vw 2vh;
+    margin: 0;
+   
+    align-items: center;
+ }
+ .django-ckeditor-widget{
+    width: 100%;
+ }
+ /* .select2-container{
+    width: 17vw !important;
+ } */
+ #div_id_experience1,#div_id_experience2,#div_id_experience3,#div_id_experience4,#div_id_experience5,#div_id_experience6,#div_id_experience7{
+    gap: 1vh;
+    overflow:scroll;
+ }
+ #div_id_difficulty2>label{
+    font-weight: 800;
+ }
+ #div_id_difficulty3>label{
+    font-weight: 800;
+ }
+ #div_id_difficulty4>label{
+    font-weight: 800;
+ }
+ #div_id_difficulty5>label{
+    font-weight: 800;
+ }
+ #div_id_difficulty6>label{
+    font-weight: 800;
+ }
+ #div_id_difficulty7>label{
+    font-weight: 800;
+ }
+ .requiredField{
+    font-weight: 800;
+ }
+@media screen and (max-width:1300px) {
+    .accordion{
+        width: 80% !important;
+    }
+    .accordion-item{
+        width: 80vw !important;
+    }
+    .accordion-body{
+    padding: 0;
+   }
+}
+@media screen and (max-width:450px) {
+.row div{
+    flex-direction: column;
+
+}
+.form-group{
+    gap: 1vh;
+    margin-top: 1vh;
+}
+}
+@media screen and (max-width:1023px) {
+    #div_id_experience1{
+        
+    }
+}
+.dropdown_span span{
+    width: 15vw !important;
+}
+}
+    
+body{
+    overflow: scroll !important;
+}
     
 </style>
 
-{% endblock %}{% block carousel %}
-<div id="carouselExampleIndicators" class="carousel slide my-carousel
-my-carousel" data-ride="carousel">
-    <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active" style="background: rgb(16,6,35);
-        background: linear-gradient(326deg, rgba(16,6,35,1) 0%, rgba(61,11,26,1) 100%);">
-      
+{% endblock %} {% block carousel %}
 
-            <div class="carousel-item-screen">
-                <div class="carousel-item-content">
-                    <h1><b style="font-family: 'Nunito', serif;">Inplex </b>|
-                        <span style="font-size: 1.4rem;">Create Your Profile</span>
-                    </h1>
-                    <br>
+    <div class="background">
+        <div class="background-black">
+            <div class="carousel-item-content">
+                <div class="text-2xl  md:text-5xl mb-4" style="color: white;"><b>Inplex |<font color="yellow">Create Your Profile</font>
                 </div>
-
-
+                
             </div>
         </div>
-
-
     </div>
+    <div class="container"><br><br>
+      
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %} {{ form.media }}
+            <div class="row">
+                <div class="form-group col-md-6 mb-0">
+                    {{ form.name|as_crispy_field }}
+                </div>
+                <div class="form-group col-md-6 mb-0">
+                    {{ form.program|as_crispy_field }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6 mb-0">
+                    {{ form.branch|as_crispy_field }}
+                </div>
+                <div class="form-group col-md-6 mb-0">
+                    {{ form.year|as_crispy_field }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6 mb-0">
+                    {{ form.selected_company|as_crispy_field }}
+                </div>
+                <div class="form-group col-md-6 mb-0">
+                    {{ form.profile|as_crispy_field }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6 mb-0">
+                    {{ form.linked_in_profile|as_crispy_field }}
+                </div>
+                <div class="form-group col-md-6 mb-0">
+                    {{ form.number|as_crispy_field }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6 mb-0">
+                    {{ form.resume|as_crispy_field }}
+                </div>
+            </div>
+    
+            {{ form.resource|as_crispy_field }}
+            <!-- {{form.as_p}} -->
+    
+    
+            <input type="submit" value="Submit" class="btn btn-large btn-primary">
+        </form>
+    </div>
+{% endblock %}
+{% block content %}
 
-</div>
-{% endblock carousel %} {% block content %}
 
-<div class="container"><br><br>
-    <h3>Create Your Inplex Profile </h3>
-    <br><br>
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %} {{ form.media }}
-        <div class="row">
-            <div class="form-group col-md-6 mb-0">
-                {{ form.name|as_crispy_field }}
-            </div>
-            <div class="form-group col-md-6 mb-0">
-                {{ form.program|as_crispy_field }}
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group col-md-6 mb-0">
-                {{ form.branch|as_crispy_field }}
-            </div>
-            <div class="form-group col-md-6 mb-0">
-                {{ form.year|as_crispy_field }}
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group col-md-6 mb-0">
-                {{ form.selected_company|as_crispy_field }}
-            </div>
-            <div class="form-group col-md-6 mb-0">
-                {{ form.profile|as_crispy_field }}
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group col-md-6 mb-0">
-                {{ form.linked_in_profile|as_crispy_field }}
-            </div>
-            <div class="form-group col-md-6 mb-0">
-                {{ form.number|as_crispy_field }}
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group col-md-6 mb-0">
-                {{ form.resume|as_crispy_field }}
-            </div>
-        </div>
-
-        {{ form.resource|as_crispy_field }}
-        <!-- {{form.as_p}} -->
-
-
-        <input type="submit" value="Submit" class="btn btn-large btn-primary">
-    </form>
-</div>
 <script>
     $(document).ready(function() {
         $(".select").select2();
     });
 </script>
-<br><br><br><br><br> {% endblock %}
+<br><br> {% endblock %}
