--- a/inplex/templates/inplex/student_experience.html
+++ b/inplex/templates/inplex/student_experience.html
@@ -468,7 +468,61 @@ a {
 					<div class="acad_row">
 
 						<div class="acad_col"  id="zoomable-table-div">
-							<div style="background: rgb(233, 238, 244);border-top-left-radius:16px ;border-top-right-radius:46px;">
+							<div style="background: rgb(233, 238, 244);border-top-left-radius:16px ;border-top-right-radius:46px; margin-bottom: 5vh;margin-left: 5vw;">
+								<div class="col-6 col-lg-3" style="display: inline-block;max-width: 299px;">
+									<div class="form-group">
+										<label for="branch">Branch</label>
+										<select class="form-control" id="branch_filter" style="border-color: #7774e7;">
+											<option selected="true" value="all">All</option>
+											{%for branch in branches %}
+											<option value="{{branch.branchName}}">{{branch}}</option>
+											{% endfor %}
+										</select>
+									</div>
+								</div>
+
+								<div class="col-6 col-lg-3" style="display: inline-block;max-width: 299px;">
+									<div class="form-group">
+										<label for="branch">Program</label>
+										<select class="form-control" id="program_filter" style="border-color: #7774e7;">
+											<option selected="true" value="all">All</option>
+											<option value="B.Tech">B.Tech</option>
+											<option value="B.Des">B.Des</option>
+											<option value="M.Tech">M.Tech</option>
+											<option value="M.Des">M.Des</option>
+											<option value="M.Sc">M.Sc</option>
+											<option value="Phd">Phd</option>
+											<option value="Others">Others</option>
+										</select>
+									</div>
+								</div>
+
+								<div class="col-6 col-lg-3" style="display: inline-block;max-width: 299px;">
+									<div class="form-group">
+										<label for="branch">Year</label>
+										<select class="form-control" id="program_filter" style="border-color: #7774e7;">
+											<option selected="true" value="2023">2023</option>
+											<option value="2022">2022</option>
+											<option value="2021">2021</option>
+										</select>
+									</div>
+								</div>
+
+
+								<div class="col-6 col-lg-3" style="display: inline-block;max-width: 299px;">
+									<div class="form-group">
+										<label for="SortBy">Sort By</label>
+										<select class="form-control" id="sort" style="border-color: #7774e7;">
+											<option selected="true" value='roll'>Roll No</option>
+											<option value='name'>Name</option>
+											<option value='programs'>Program</option>
+											<option value='branch'>Branch</option>
+											<option value='company'>Company</option>
+											<option value='profile'>Profile</option>
+											<option value='sector'>Sector</option>
+										</select>
+									</div>
+								</div>
 							</div>
 
 							
@@ -502,18 +556,6 @@ a {
                                               
 												</thead>
 												<tbody style="background-color: white;" class="child_class">
-<!--                                                    
-                                                    <tr class = "row100">
-                                                        <td class="column100 column1" data-column="column1">
-                                                            yuyg
-                                                        </a></td>
-                                                        <td class="column100 column2" data-column="column2">uhyb</td>
-                                                        <td class="column100 column3" data-column="column3">yu</td>
-                                                        <td class="column100 column4" data-column="column4">uihu9</td>
-                                                        <td class="column100 column5" data-column="column5">hi</td>
-                                                        <td class="column100 column6" data-column="column6">uokp</td>
-                                                      
-                                                      </tr> -->
 													  
 													  	{% for j in students %}
 														<tr class = "row100">
